Archive2/7d/b8e697b7712859/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
+ ./a.out
+ clang++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:8:20: error: parameter declarator cannot be qualified
    Baz b(Foo(Foo::bar)); // #1
              ~~~~~^
1 error generated.
